# zMMIX

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/zLibMMIX/: EXPECT_BYTE_EQU.mms  EXPECT_OCTA_EQ.mms  EXPECT_OCTA_EQU.mms  EXPECT_STR_EQ.mms  EXPECT_STR_IC_EQ.mms  EXPECT_TETRA_EQ.mms  EXPECT_TETRA_EQU.mms  EXPECT_WYDE_EQ.mms  EXPECT_WYDE_EQU.mms  builtin_mms  num_to_str.mms  print_str_assertion_fail.mms  print_unsigned_assertion_fail.mms  test_num_to_str.mmt  test_unsigned_num_to_str.mmt  unsigned_num_to_str.mms
lib/zLibMMIX/char/: char.mms  tolower.mms  toupper.mms
lib/zLibMMIX/io/: print_num.mms
lib/zLibMMIX/numeric/: num_to_str.mms  numeric.mms  unsigned_num_to_str.mms
lib/zLibMMIX/string/: tolower.mms  toupper.mms
lib/zLibMMIX/testing/assertion/: ASSERT_BYTE_ARRAY_EQ.mms  ASSERT_BYTE_ARRAY_EQU.mms  (+69 more)
lib/zLibmmix/: EXPECT_BYTE_EQ.mms  EXPECT_BYTE_EQU.mms  EXPECT_STR_IC_EQ.mms  builtin_mms  char.mms  num_to_str.mms  print_assertion_fail.mms  print_str_assertion_fail.mms  test_char.mms  test_char.mmt  test_num_to_str.mms  test_num_to_str.mmt  unsigned_num_to_str.mms
src/: CMakeLists.txt  zmmix_tg.l
tests/it/: test_EXPECT_BYTE_EQ.mms  test_EXPECT_BYTE_EQU.mms  test_EXPECT_OCTA_EQ.mms  test_EXPECT_OCTA_EQ.mmt  test_EXPECT_OCTA_EQU.mms  test_EXPECT_OCTA_EQU.mmt  test_EXPECT_STR_EQ.mms  test_EXPECT_STR_IC_EQ.mms  test_EXPECT_TETRA_EQ.mms  test_EXPECT_TETRA_EQ.mmt  test_EXPECT_TETRA_EQU.mms  test_EXPECT_WYDE_EQ.mms  test_EXPECT_WYDE_EQ.mmt  test_EXPECT_WYDE_EQU.mms
tests/lib/zLibMMIX/: test_EXPECT_STR_EQ.mmt  test_EXPECT_WYDE_EQU.mmt
(+45 files in other folders)
